[tool.black]
line-length = 99
target-version = ["py313"]
exclude = '''
/(
    \.git|.venv
)/
'''

[tool.isort]
profile = "black"
float_to_top = true
skip_glob = ".venv"

[tool.poetry]
name = "lego_sets"
version = "0.1.0"
description = "List of Lego sets"
repository = "https://github.com/expobrain/lego_sets"
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
loguru = "^0.7.3"
requests = "^2.32.3"
jinja2 = "^3.1.6"
dotenv = "^0.9.9"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ".venv/"
check_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true

# [[tool.mypy.overrides]]
# module = "google.auth.credentials"
# ignore_missing_imports = true

[tool.pytest.ini_options]
timeout = 10
